--- a/package.json
+++ b/package.json
@@ -88,5 +88,8 @@
     "tailwind-bootstrap-grid": "^5.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
